WO|O-RE|js|2x types logo & all fonts format

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -19,7 +19,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="">
     <meta property="og:description" content="">
-    <meta property="og:image" content="https://www.mateusz-archicinski.pl/tile-1200x630px.png">
+    <meta property="og:image" content="https://www.mateusz-archicinski.pl/images/logo/tiles/tile-1200x630px-2.png">
     <meta name="robots" content="index, follow, noodp, noydir">
     <meta name="country" content="en">
     <meta name="language" content="en">
@@ -30,13 +30,13 @@
     <link rel="manifest" href="manifest.json">
     <!--Icon Sources-->
     <!--Favicons-->
-    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/images/logo/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/images/logo/favicons/favicon-32x32.png" sizes="32x32">
     <!--iOS & Android-->
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="/images/logo/apple-touch-icons/apple-touch-icon-2.png">
     <!--Windows-->
     <meta name="msapplication-TileColor" content="#212121">
-    <meta name="msapplication-TileImage" content="images/logo/logo-144x144.png">
+    <meta name="msapplication-TileImage" content="/images/logo/logo-144x144.png">
     <!--Google Chrome - Theme Color-->
     <meta name="theme-color" content="#f44336">
     <!--Cascading Style Sheets Sources-->
