--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -11,14 +11,14 @@
     <meta name="format-detection" content="telephone=no">
     <!--Search Engine Optimization Sources-->
     <title>Mateusz Archiciński / Front-End Developer</title>
-    <meta name="description" content="Strona internetowa młodego frontend developera, freelancera z okolic Warszawy. Zajmuje się odświeżaniem obecnych i tworzeniem nowych stron wizytówek. Ostatnimi czasy zagłebiam się w tajniki webdesignu i poznawaniu bardziej złożonych technologii oraz pozycjoonowania.">
-    <meta name="keywords" content="">
+    <meta name="description" content="Strona internetowa młodego front-end developera, freelancera z okolic Warszawy. Zajmuje się odświeżaniem obecnych i tworzeniem nowych stron wizytówek. Ostatnimi czasy zagłębiam się w tajniki webdesignu i poznawaniu bardziej złożonych technologii oraz pozycjonowania.">
+    <meta name="keywords" content=" !? uzupełnić">
     <meta name="author" content="Mateusz Archiciński">
     <meta property="fb:app_id" content="126655154641555">
     <meta property="og:url" content="https://www.mateusz-archicinski.pl/">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="Strona internetowa młodego frontend developera, freelancera z okolic Warszawy. Zajmuje się odświeżaniem obecnych i tworzeniem nowych stron wizytówek. Ostatnimi czasy zagłebiam się w tajniki webdesignu i poznawaniu bardziej złożonych technologii oraz pozycjoonowania.">
+    <meta property="og:title" content="Mateusz Archiciński / Front-End Developer">
+    <meta property="og:description" content="Strona internetowa młodego front-end developera, freelancera z okolic Warszawy. Zajmuje się odświeżaniem obecnych i tworzeniem nowych stron wizytówek. Ostatnimi czasy zagłębiam się w tajniki webdesignu i poznawaniu bardziej złożonych technologii oraz pozycjonowania.">
     <meta property="og:image" content="https://www.mateusz-archicinski.pl/images/logo/tiles/tile-1200x630px-2.png">
     <meta name="robots" content="index, follow, noodp, noydir">
     <meta name="country" content="pl">
@@ -162,11 +162,11 @@
                     </li>
                     <li class="info-block">
                       <div class="info-title i-block text-bolded">Strona internetowa:</div>
-                      <div class="info-description i-block"><a class="info-link" href="https://www.mateusz-archicinski.pl">https://www.mateusz-archicinski.pl<span class="icon icon-globe color-accent-light info-icon" aria-hidden="true"></span></a></div>
+                      <div class="info-description i-block"><a class="info-link" href="https://www.mateusz-archicinski.pl">www.mateusz-archicinski.pl<span class="icon icon-globe color-accent-light info-icon" aria-hidden="true"></span></a></div>
                     </li>
                     <li class="info-block">
                       <div class="info-title i-block text-bolded">Telefon:</div>
-                      <div class="info-description i-block"><a class="info-link" href="tel:505-072-776">505-072-776<span class="icon icon-mobile color-accent-light info-icon" aria-hidden="true"></span></a></div>
+                      <div class="info-description i-block"><a class="info-link" href="tel:505072776">505-072-776<span class="icon icon-mobile color-accent-light info-icon" aria-hidden="true"></span></a></div>
                     </li>
                   </ul>
                 </div>
@@ -223,7 +223,7 @@
                   <ul class="timeline__list">
                     <li class="timeline-point"><span class="timeline-point-period beginning">01.2017 - Obecnie</span>
                       <h4 class="timeline-point-title">Front-End Developer / Freelancer</h4>
-                      <p class="timeline-point-description">Krótkoterminowe zlecenia zadań do wykonania zdalnie.</p><a class="info-link timeline-point-link ending" href="https://www.mateusz-archicinski.pl" target="_blank">https://www.mateusz-archicinski.pl<span class="icon icon-globe color-primary info-icon" aria-hidden="true"></span></a>
+                      <p class="timeline-point-description">Krótkoterminowe zlecenia zadań do wykonania zdalnie.</p><a class="info-link timeline-point-link ending" href="https://www.mateusz-archicinski.pl" target="_blank">www.mateusz-archicinski.pl<span class="icon icon-globe color-primary info-icon" aria-hidden="true"></span></a>
                     </li>
                     <li class="timeline-point"><span class="timeline-point-period beginning">04.2016 - 01.2017</span>
                       <h4 class="timeline-point-title">Web Content Editor w K2 Internet S.A.</h4>
@@ -239,7 +239,7 @@
                     </li>
                     <li class="timeline-point"><span class="timeline-point-period beginning">10.2015 - Obecnie</span>
                       <h4 class="timeline-point-title">Projekty w ramach nauki</h4>
-                      <p class="timeline-point-description">Wykonane i udostępnione projekty w ramach nauki różnych technologii. Zachęcam do odwiedzenia mojego Githuba.</p><a class="info-link timeline-point-link ending" href="https://github.com/mateuszarchicinski?tab=repositories" target="_blank">https://github.com/mateuszarchicinski?tab=repositories<span class="icon icon-github color-github info-icon" aria-hidden="true"></span></a>
+                      <p class="timeline-point-description">Wykonane i udostępnione projekty w ramach nauki różnych technologii. Zachęcam do odwiedzenia mojego Githuba.</p><a class="info-link timeline-point-link ending" href="https://github.com/mateuszarchicinski?tab=repositories" target="_blank">github.com/mateuszarchicinski<span class="icon icon-github color-github info-icon" aria-hidden="true"></span></a>
                     </li>
                     <li class="timeline-point beginning"><span class="timeline-point-period beginning">10.2015 - Obecnie</span>
                       <h4 class="timeline-point-title">Kursy internetowe</h4>
@@ -305,7 +305,7 @@
               <div class="heading-separator">
                 <div class="heading-separator__line heading-separator__line-bolded-3 primary"></div>
               </div>
-              <p class="paragraph services-item-description">Pocięcie i zakodowanie do HTML5, CSS3 i JavaScript dostarczonego projektu graficznego strony internetowej, mailingu, szablonu WordPress i innych.</p>
+              <p class="paragraph services-item-description">Pocięcie i zakodowanie do HTML5,<br>CSS3 i JavaScript dostarczonego<br>projektu graficznego strony<br>internetowej, mailingu, szablonu<br>WordPress i innych.</p>
               <button class="btn to-top btn-primary services-item-button services-item-button-js" type="button" data-src=""><span>Więcej</span></button>
             </div>
             <div class="white-frame-058001 services-item text-center"><span class="icon-img icon-5 icon-services-devices services-item-icon" aria-hidden="true"></span>
@@ -313,7 +313,7 @@
               <div class="heading-separator">
                 <div class="heading-separator__line heading-separator__line-bolded-3 primary"></div>
               </div>
-              <p class="paragraph services-item-description">Dostosowanie strony internetowej do wybranych przeglądarek i urządzeń mobilnych z uwzględnieniem różnych rozdzielczości (tzw. Responsive Web Design).</p>
+              <p class="paragraph services-item-description">Dostosowanie strony internetowej do<br>wybranych przeglądarek i urządzeń<br>mobilnych z uwzględnieniem różnych<br>rozdzielczości (tzw. Responsive Web<br>Design).</p>
               <button class="btn to-top btn-primary services-item-button services-item-button-js" type="button" data-src=""><span>Więcej</span></button>
             </div>
             <div class="white-frame-058001 services-item text-center"><span class="icon-img icon-5 icon-services-admin services-item-icon" aria-hidden="true"></span>
@@ -321,7 +321,7 @@
               <div class="heading-separator">
                 <div class="heading-separator__line heading-separator__line-bolded-3 primary"></div>
               </div>
-              <p class="paragraph services-item-description">Wdrożenie i utrzymanie strony/aplikacji internetowej w tym okresowe raporty z testów automatycznych i manualnych wybranych funkcjonalności.</p>
+              <p class="paragraph services-item-description">Wdrożenie i utrzymanie<br>strony/aplikacji internetowej w tym<br>okresowe raporty z testów<br>automatycznych i manualnych<br>wybranych funkcjonalności.</p>
               <button class="btn to-top btn-primary services-item-button services-item-button-js" type="button" data-src=""><span>Więcej</span></button>
             </div>
             <div class="white-frame-058001 services-item text-center"><span class="icon-img icon-5 icon-services-spa services-item-icon" aria-hidden="true"></span>
@@ -329,7 +329,7 @@
               <div class="heading-separator">
                 <div class="heading-separator__line heading-separator__line-bolded-3 primary"></div>
               </div>
-              <p class="paragraph services-item-description">Tworzenie całej warstwy klienta aplikacji internetowej lub wybranych komponentów w oparciu <br>o framework AngularJS, HTML5, CSS3, ES6/TypeScript.</p>
+              <p class="paragraph services-item-description">Tworzenie całej warstwy klienta<br>aplikacji internetowej lub wybranych<br>komponentów w oparciu<br>o framework AngularJS, HTML5,<br>CSS3, ES6/TypeScript.</p>
               <button class="btn to-top btn-primary services-item-button services-item-button-js" type="button" data-src=""><span>Więcej</span></button>
             </div>
             <div class="white-frame-058001 services-item text-center"><span class="icon-img icon-5 icon-services-api services-item-icon" aria-hidden="true"></span>
@@ -337,7 +337,7 @@
               <div class="heading-separator">
                 <div class="heading-separator__line heading-separator__line-bolded-3 primary"></div>
               </div>
-              <p class="paragraph services-item-description">Tworzenie całej warstwy serwera lub wybranych usług zapewniających dostęp do zasobów serwera za pośrednictwem protokołu HTTP <br>w oparciu o framework Express.</p>
+              <p class="paragraph services-item-description">Tworzenie całej warstwy serwera lub<br>wybranych usług zapewniających<br>dostęp do zasobów serwera za<br>pośrednictwem protokołu HTTP<br>w oparciu o framework Express.</p>
               <button class="btn to-top btn-primary services-item-button services-item-button-js" type="button" data-src=""><span>Więcej</span></button>
             </div>
           </div>
@@ -451,19 +451,19 @@
                   <h3 class="heading heading-4 contact-form-title text-center">Formularz kontaktowy</h3>
                   <div class="contact-form__input-container">
                     <label class="contact-form__label" for="contactForm[name]">Imię i nazwisko / Nazwa firmy<span class="contact-form__input-required" aria-label="To pole jest wymagane"></span></label>
-                    <input class="contact-form__input" id="contactForm[name]" name="name" type="text" required maxlength="150">
+                    <input class="contact-form__input" id="contactForm[name]" name="name" type="text" required maxlength="150" aria-required="true">
                   </div>
                   <div class="contact-form__input-container">
                     <label class="contact-form__label" for="contactForm[email]">E-mail<span class="contact-form__input-required" aria-label="To pole jest wymagane"></span></label>
-                    <input class="contact-form__input" id="contactForm[email]" name="email" type="email" required maxlength="150">
+                    <input class="contact-form__input" id="contactForm[email]" name="email" type="email" required maxlength="150" aria-required="true">
                   </div>
                   <div class="contact-form__input-container">
                     <label class="contact-form__label" for="contactForm[subject]">Temat<span class="contact-form__input-required" aria-label="To pole jest wymagane"></span></label>
-                    <input class="contact-form__input" id="contactForm[subject]" name="subject" type="text" required maxlength="150">
+                    <input class="contact-form__input" id="contactForm[subject]" name="subject" type="text" required maxlength="150" aria-required="true">
                   </div>
                   <div class="contact-form__input-container">
                     <label class="contact-form__label" for="contactForm[message]">Treść wiadomości<span class="contact-form__input-required" aria-label="To pole jest wymagane"></span></label>
-                    <textarea class="contact-form__textarea" id="contactForm[message]" name="message" required maxlength="1500"></textarea>
+                    <textarea class="contact-form__textarea" id="contactForm[message]" name="message" required maxlength="1500" aria-required="true"></textarea>
                   </div>
                   <button class="btn to-top btn-primary contact-form__button" type="submit"><span>Wyślij wiadomość</span></button>
                 </form>
@@ -500,11 +500,11 @@
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
             <ul class="main-footer__list">
-              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
-              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
-              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
-              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
-              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
+              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/TDD-Helpdesk-Web-App-Project">Helpdesk - Aplikacja internetowa</a></li>
+              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/Github-Issues-Application">Github Issues Application</a></li>
+              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/Restful-API--NodeJS-ExpressJS">Restful API - NodeJS & ExpressJS</a></li>
+              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/Angular1.x-Template">Angular 1.x - Template</a></li>
+              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/Kickstart-Templates">Kickstart Templates</a></li>
             </ul>
           </div>
           <div class="col-12 col-md-4">
@@ -513,11 +513,9 @@
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
             <ul class="main-footer__list">
-              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
-              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
-              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
-              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
-              <li><a class="main-footer__link" href="#">Lorem ipsum ...</a></li>
+              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/mateusz-archicinski.pl/commit/7dc0ed7f82998c6b7248787e4a9cd4c85b06657a">Initial commit</a></li>
+              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/TDD-Helpdesk-Web-App-Project/commit/4b0e8fdfa351e48b90bbb2220e58785c78ddd071">Readme - Project name changed</a></li>
+              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/Github-Issues-Application/commit/ef1d8f410f20bce3fb2ec1ee5ff14884da2029b4">Removed spaces between osx buttons</a></li>
             </ul>
           </div>
           <div class="col-12 col-md-4 row no-gutters flex-column">
