WO|O-RE-T|json-pug|Added some translation and new content

--- a/src/index-pl.html
+++ b/src/index-pl.html
@@ -11,14 +11,14 @@
     <meta name="format-detection" content="telephone=no">
     <!--Search Engine Optimization Sources-->
     <title>Mateusz Archiciński / Front-End Developer</title>
-    <meta name="description" content="Strona internetowa młodego front-end developera, freelancera z okolic Warszawy. Zajmuje się odświeżaniem obecnych i tworzeniem nowych stron wizytówek. Ostatnimi czasy zagłębiam się w tajniki webdesignu i poznawaniu bardziej złożonych technologii oraz pozycjonowania.">
-    <meta name="keywords" content=" !? uzupełnić">
+    <meta name="description" content="Strona internetowa Mateusza Archicińskiego Front-End Developera, freelancera z okolic Warszawy. Świadczącego usługi odświeżania obecny i tworzenia nowych stron/aplikacji internetowych dostosowanych do najnowszych standardów sieciowych, a także zbudowanych w oparciu o nowoczesne i najlepiej dobrane technologie.">
+    <meta name="keywords" content="tworzenie stron www,tworzenie stron internetowych,tworzenie aplikacji internetowych,praca,strony internetowe,strona internetowa,aplikacje internetowe,aplikacja internetowa,w sieci,html,css,javascript,nodejs,wordpress,front end developer,front end,projekt,przeglądarki internetowe,serwer">
     <meta name="author" content="Mateusz Archiciński">
     <meta property="fb:app_id" content="126655154641555">
     <meta property="og:url" content="https://www.mateusz-archicinski.pl/">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Mateusz Archiciński / Front-End Developer">
-    <meta property="og:description" content="Strona internetowa młodego front-end developera, freelancera z okolic Warszawy. Zajmuje się odświeżaniem obecnych i tworzeniem nowych stron wizytówek. Ostatnimi czasy zagłębiam się w tajniki webdesignu i poznawaniu bardziej złożonych technologii oraz pozycjonowania.">
+    <meta property="og:description" content="Strona internetowa Mateusza Archicińskiego Front-End Developera, freelancera z okolic Warszawy. Świadczącego usługi odświeżania obecny i tworzenia nowych stron/aplikacji internetowych dostosowanych do najnowszych standardów sieciowych, a także zbudowanych w oparciu o nowoczesne i najlepiej dobrane technologie.">
     <meta property="og:image" content="https://www.mateusz-archicinski.pl/images/logo/tiles/tile-1200x630px-2.png">
     <meta name="robots" content="index, follow, noodp, noydir">
     <meta name="country" content="pl">
@@ -59,7 +59,7 @@
       <div class="container">
         <div class="row no-gutters align-items-center justify-content-between"><a class="site-logo-wrapper" href="/"><img class="site-logo__img" src="images/logo/logo.png" alt="#MA - Logo strony internetowej" width="94" height="28"></a>
           <h1 class="text-hidden" aria-hidden="true">#Mateusz Archiciński</h1>
-          <button class="side-nav__button-toggle side-nav-toggle-js" aria-label="Side navigation toggle button"><span class="icon icon-2 icon-menu color-white" aria-hidden="true"></span></button>
+          <button class="side-nav__button-toggle side-nav-toggle-js" aria-label="Przełącznik nawigacji bocznej"><span class="icon icon-2 icon-menu color-white" aria-hidden="true"></span></button>
           <nav class="site-nav-wrapper">
             <ul class="site-nav__list">
               <li><a class="site-nav__link active" href="#home" data-spy>Strona główna</a></li>
@@ -78,7 +78,7 @@
       </div>
     </header>
     <nav class="side-nav-wrapper side-nav-js">
-      <button class="side-nav__button-toggle side-nav-toggle-js" aria-label="Side navigation toggle button"><span class="icon icon-2 icon-cancel color-primary-dark" aria-hidden="true"></span></button>
+      <button class="side-nav__button-toggle side-nav-toggle-js" aria-label="Przełącznik nawigacji bocznej"><span class="icon icon-2 icon-cancel color-primary-dark" aria-hidden="true"></span></button>
       <div class="side-nav-overlay">
         <ul class="side-nav__list">
           <li><a class="side-nav__link active" href="#home" data-spy>Strona główna</a></li>
@@ -378,50 +378,50 @@
               </ul>
               <div class="row portfolio-items portfolio-items-js">
                 <div class="col-lg-4 col-md-6 col-12 portfolio-item" data-type="websites">
-                  <div class="single-project-wrapper" tabindex="0"><img class="single-project__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img WEBSITE">
+                  <div class="single-project-wrapper" tabindex="0"><img class="single-project__img" src="../images/portfolio/mateusz-archicinski.png" alt="Logo strony internetowej - mateusz-archicinski.pl">
                     <div class="single-project-content text-center" aria-hidden="false">
-                      <h3 class="heading heading-5 single-project-title">Strona WEBSITE</h3>
+                      <h3 class="heading heading-5 single-project-title">mateusz-archicinski.pl</h3>
                       <div class="heading-separator">
                         <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 primary"></div>
                       </div>
-                      <p class="paragraph ending single-project-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                      <div class="single-project-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-12 portfolio-item" data-type="mailings">
-                  <div class="single-project-wrapper" tabindex="0"><img class="single-project__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img MAILINGS">
-                    <div class="single-project-content text-center" aria-hidden="false">
-                      <h3 class="heading heading-5 single-project-title">Strona MAILINGS</h3>
-                      <div class="heading-separator">
-                        <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 primary"></div>
-                      </div>
-                      <p class="paragraph ending single-project-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                      <div class="single-project-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
+                      <p class="paragraph ending single-project-description">Strona internetowa, wizytówka<br>ukazująca usługi Mateusza Archicińskigo.</p>
+                      <div class="single-project-buttons"><a class="btn to-top color-white" href="https://github.com/mateuszarchicinski/mateusz-archicinski.pl" target="_blank">Kod źródłowy</a><a class="btn to-top btn-primary" href="https://www.mateusz-archicinski.pl" target="_blank">Podgląd</a></div>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12 portfolio-item" data-type="spa">
-                  <div class="single-project-wrapper" tabindex="0"><img class="single-project__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img SPA">
+                  <div class="single-project-wrapper" tabindex="0"><img class="single-project__img" src="../images/portfolio/helpdesk--aplikacja-internetowa.png" alt="HD APP - Logo">
                     <div class="single-project-content text-center" aria-hidden="false">
-                      <h3 class="heading heading-5 single-project-title">Strona SPA</h3>
+                      <h3 class="heading heading-5 single-project-title">Helpdesk - Aplikacja internetowa</h3>
                       <div class="heading-separator">
                         <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 primary"></div>
                       </div>
-                      <p class="paragraph ending single-project-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                      <div class="single-project-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
+                      <p class="paragraph ending single-project-description">Projekt związany z techniką<br>programowania sterowanego testami.</p>
+                      <div class="single-project-buttons"><a class="btn to-top color-white" href="https://github.com/mateuszarchicinski/TDD-Helpdesk-Web-App-Project" target="_blank">Kod źródłowy</a><a class="btn to-top btn-primary" href="https://www.helpdesk-app.mateusz-archicinski.pl" target="_blank">Podgląd</a></div>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12 portfolio-item" data-type="api">
-                  <div class="single-project-wrapper" tabindex="0"><img class="single-project__img" src="https://t4.ftcdn.net/jpg/01/01/91/63/240_F_101916353_CLAc4e3dzc1FPbfNwJctpwVCrbqBZclb.jpg" alt="An example img API">
+                  <div class="single-project-wrapper" tabindex="0"><img class="single-project__img" src="../images/portfolio/restful-api--nodejs-express.jpg" alt="Kolory - Restful API - NodeJS &amp; ExpressJS">
                     <div class="single-project-content text-center" aria-hidden="false">
-                      <h3 class="heading heading-5 single-project-title">Strona API</h3>
+                      <h3 class="heading heading-5 single-project-title">Restful API - NodeJS &amp; ExpressJS</h3>
                       <div class="heading-separator">
                         <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 primary"></div>
                       </div>
-                      <p class="paragraph ending single-project-description">Lorem ipsum dolor sit amet, consectetur<br>adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                      <div class="single-project-buttons"><a class="btn to-top color-white" href="#">Kod źródłowy</a><a class="btn to-top btn-primary" href="#">Podgląd</a></div>
+                      <p class="paragraph ending single-project-description">Project Restful API jest<br>zbudowany na platformie Node.js.</p>
+                      <div class="single-project-buttons"><a class="btn to-top color-white" href="https://github.com/mateuszarchicinski/Restful-API--NodeJS-ExpressJS" target="_blank">Kod źródłowy</a><a class="btn to-top btn-primary" href="https://restful-api.mateusz-archicinski.pl" target="_blank">Podgląd</a></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 portfolio-item" data-type="api">
+                  <div class="single-project-wrapper" tabindex="0"><img class="single-project__img" src="../images/portfolio/smogly-data-visualizer.png" alt="Logo projektu/strony internetowej Smogly - http://smogly.pl/">
+                    <div class="single-project-content text-center" aria-hidden="false">
+                      <h3 class="heading heading-5 single-project-title">Smogly Data Visualizer</h3>
+                      <div class="heading-separator">
+                        <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 primary"></div>
+                      </div>
+                      <p class="paragraph ending single-project-description">Projekt stworzony podczas<br>hackatonu Zdrowieton.js.</p>
+                      <div class="single-project-buttons"><a class="btn to-top color-white" href="https://github.com/WarMaxis/Zdrowieton.js_project_8" target="_blank">Kod źródłowy</a><a class="btn to-top btn-primary" href="https://smogly-data-visualizer.mateusz-archicinski.pl/results?find=name:Smogly&amp;select=name,country&amp;limit=4&amp;sort=last_metering.created:-1" target="_blank">Podgląd</a></div>
                     </div>
                   </div>
                 </div>
