WO|O-RE-N|sass-pug-js|Improved gulp tasks & Added new functionality - github user info

--- a/src/index-en.html
+++ b/src/index-en.html
@@ -384,7 +384,7 @@
                       <div class="heading-separator">
                         <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 primary"></div>
                       </div>
-                      <p class="paragraph ending single-project-description">Website, a business card to showing<br>services of Mateusz Archicinski.</p>
+                      <p class="paragraph ending single-project-description">Website project,<br>my business card on the net.</p>
                       <div class="single-project-buttons"><a class="btn to-top color-white" href="https://github.com/mateuszarchicinski/mateusz-archicinski.pl" target="_blank">Source code</a><a class="btn to-top btn-primary" href="https://www.mateusz-archicinski.pl" target="_blank">Live preview</a></div>
                     </div>
                   </div>
@@ -408,7 +408,7 @@
                       <div class="heading-separator">
                         <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 primary"></div>
                       </div>
-                      <p class="paragraph ending single-project-description">Project Restful API is built<br>on the Node.js platform.</p>
+                      <p class="paragraph ending single-project-description">Project provides a well-configured<br>server environment.</p>
                       <div class="single-project-buttons"><a class="btn to-top color-white" href="https://github.com/mateuszarchicinski/Restful-API--NodeJS-ExpressJS" target="_blank">Source code</a><a class="btn to-top btn-primary" href="https://restful-api.mateusz-archicinski.pl" target="_blank">Live preview</a></div>
                     </div>
                   </div>
@@ -499,24 +499,14 @@
             <div class="heading-separator">
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
-            <ul class="main-footer__list">
-              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/TDD-Helpdesk-Web-App-Project">Helpdesk - Aplikacja internetowa</a></li>
-              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/Github-Issues-Application">Github Issues Application</a></li>
-              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/Restful-API--NodeJS-ExpressJS">Restful API - NodeJS & ExpressJS</a></li>
-              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/Angular1.x-Template">Angular 1.x - Template</a></li>
-              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/Kickstart-Templates">Kickstart Templates</a></li>
-            </ul>
+            <ul class="main-footer__list github-user-info-starred-js"></ul>
           </div>
           <div class="col-12 col-md-4">
             <h3 class="heading heading-5 main-footer-col-title text-center">Recent changes</h3>
             <div class="heading-separator">
               <div class="heading-separator__line heading-separator__line-reduced-2 heading-separator__line-bolded-3 accent"></div>
             </div>
-            <ul class="main-footer__list">
-              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/mateusz-archicinski.pl/commit/7dc0ed7f82998c6b7248787e4a9cd4c85b06657a">Initial commit</a></li>
-              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/TDD-Helpdesk-Web-App-Project/commit/4b0e8fdfa351e48b90bbb2220e58785c78ddd071">Readme - Project name changed</a></li>
-              <li><a class="main-footer__link" href="https://github.com/mateuszarchicinski/Github-Issues-Application/commit/ef1d8f410f20bce3fb2ec1ee5ff14884da2029b4">Removed spaces between osx buttons</a></li>
-            </ul>
+            <ul class="main-footer__list github-user-info-events-js"></ul>
           </div>
           <div class="col-12 col-md-4 row no-gutters flex-column">
             <h3 class="heading heading-5 main-footer-col-title text-center">Find me</h3>
@@ -554,7 +544,7 @@
     <script src="../bower_components/owl.carousel/dist/owl.carousel.js"></script>
     <!--endbower-->
     <!--Web Page - JavaScript Sources-->
-    <script src="js/main.js"></script>
+    <script src="/js/main.js"></script>
     <!--endbuild-->
     <!--Google Analytics-->
     <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create','UA-72931206-2','auto');ga('send','pageview');</script>
